--- a/ThimkersRemoteWork.ipynb
+++ b/ThimkersRemoteWork.ipynb
@@ -6147,7 +6147,7 @@
    "source": [
     "### **Industry**\n",
     "\n",
-    "The Industry variable originally contained 24 distinct developer industries (excluding other). Similar industries were combined to create wider yet accurate generalizations. A list of umbrella terms are present below along with their inclusions.\n",
+    "The Industry variable originally contained 14 distinct developer industries (excluding other). Similar industries were combined to create wider yet accurate generalizations. A list of umbrella terms are present below along with their inclusions.\n",
     "\n",
     "**Fintech:**\n",
     "- Fintech, Banking/Financial Services, Insurance\n",
@@ -6159,7 +6159,7 @@
     "- Government and Defense, Legal\n",
     "\n",
     "**These Remaining Industries Served as their own Features:**\n",
-    "- Software Development, Internet, Telecomm or Information Services, Manufacturing, Higher Education, Retail and Consumer Services, Transportation, or Supply Chain, Computer Systems Design and Services, Energy, Entertainment, Consulting/Professional Services, Aviation/Aerospace, Healthcare & Pharmaceuticals, Non-Profit, Automotive, Real Estate, Agriculture, Human Resources, Environment\n",
+    "- Software Development, Internet, Telecomm or Information Services, Manufacturing, Higher Education, Retail and Consumer Services, Transportation, or Supply Chain, Computer Systems Design and Services, Energy\n",
     "\n"
    ]
   },
